<resources>
    <string name="app_name">Matrices_eCommerceApp</string>
    <string name="app_start_message">Find, Discover, Choose and Buy anything online.</string>
    <string name="alreadyHaveanAxxountLogin">Already have an Account? Login</string>
    <string name="joinNow">Join Now</string>
    <string name="hint_phomeNo">Phone Number</string>
    <string name="hint_password">Password</string>
    <string name="RememberMe">Remember Me</string>
    <string name="forgetPassword">Forget Password</string>
    <string name="Login">Login</string>
    <string name="txtAdmin">I\'am an Admin?</string>
    <string name="txtNotAdmin">I\'am not Admin</string>
    <string name="Register">Create Account</string>
    <string name="userName">User Name</string>
    <string name="hint_Confirmpassword">Confirm Password</string>
    <string name="ErrNameIsEmpty">Please Enter your name....</string>
    <string name="ErrPhoneIsEmpth">Please Enter your Phone Number....</string>
    <string name="ErrPasswordIsEmpth">Please Enter your Password....</string>
    <string name="ErrPasswordNotMatch">Password doesn\'t match....</string>
    <string name="creatingAccount">Please wait, while we are checking the credentials.</string>
    <string name="successfullLogin">Logged in successfully...</string>
    <string name="incorrectPassword">Incorrect Password..</string>
    <string name="email">Email Address</string>
    <string name="ErrEmptyEmailAddress">Please Enter Email Address...</string>
    <string name="phoneVarificationMessage">I sent you a code, it will be detected automatically but if it is not detected you can put it below manually as well</string>
    <string name="waitMessage">Wait for the code I sent you...</string>
    <string name="enterCodeMsg">enter code</string>
    <string name="ContinueWithPhoneNumber">Continue with phone number</string>
    <string name="LoginWithGoogleAccount">Login with Google Account</string>
    <string name="Logincontinue">Continue</string>
    <string name="Country">Choose a Country</string>
    <string name="demoCode">+92</string>
    <string name="sign_out">Sign Out</string>
    <string name="disconnect">Disconnect</string>
    <string name="signed_out">Signed Out</string>
    <string name="google_status_fmt">Google User: %s</string>
    <string name="google_title_text">Google Sign In</string>

    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="title_activity_login_or_signup">LoginOrSignup</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
</resources>
