<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/welcome"
    tools:context=".MainActivity">

   <ImageView
       android:id="@+id/app_logo"
       android:layout_width="@dimen/width300dp"
       android:layout_height="@dimen/Height100dp"
       android:layout_centerHorizontal="true"
       android:layout_marginTop="60dp"
       android:src="@drawable/applogo"/>

    <TextView
        android:id="@+id/app_slogan"
        android:layout_width="@dimen/wigth220dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="@dimen/marginEnd80dp"
        android:layout_marginRight="@dimen/marginEnd80dp"
        android:layout_marginTop="@dimen/marginTop140dp"
        android:text="@string/app_start_message"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold|italic"
        android:textSize="@dimen/textSize22sp"
        />

    <Button
        android:id="@+id/main_login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="@dimen/marginBottom10dp"
        android:layout_marginLeft="@dimen/marginLeftRight15dp"
        android:layout_marginRight="@dimen/marginLeftRight15dp"
        android:background="@drawable/buttons"
        android:padding="@dimen/paddng20dp"
        android:textAllCaps="false"
        android:textSize="@dimen/textSize18sp"
        android:layout_alignParentLeft="true"
        android:text="@string/alreadyHaveanAxxountLogin"
        android:textColor="@color/White"/>
    <Button
        android:id="@+id/main_join_now_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/marginBottom5dp"
        android:layout_above="@+id/main_login_button"
        android:layout_marginLeft="@dimen/marginLeftRight15dp"
        android:layout_marginRight="@dimen/marginLeftRight15dp"
        android:background="@drawable/strocks"
        android:padding="@dimen/paddng20dp"
        android:textAllCaps="false"
        android:textSize="@dimen/textSize18sp"
        android:text="@string/joinNow"
        android:textColor="@color/White"/>


</RelativeLayout>